@@ -47,14 +47,36 @@ def get_dict(m=None):
 
     if sys.platform == 'darwin':         # -------- OSX
         d['OSX_ARCH'] = 'i386' if cc.bits == 32 else 'x86_64'
-        d['CFLAGS'] = '-arch %(OSX_ARCH)s' % d
-        d['CXXFLAGS'] = d['CFLAGS']
-        d['LDFLAGS'] = d['CFLAGS']
-        d['MACOSX_DEPLOYMENT_TARGET'] = '10.5'
+        if cc.build_cppflags:
+            d['CPPFLAGS'] = cc.build_cppflags
+        d['CFLAGS'] = ('-arch %(OSX_ARCH)s' % d) if not cc.build_cflags else cc.build_cflags  #FIX ME: should this be like linux??? if an exported CFLAGS Variable exists there is no autoguess value in Linux
+        d['CXXFLAGS'] = d['CFLAGS'] if not cc.build_cxxflags else cc.build_cxxflags  #FIX ME: should this be like linux???
+        d['LDFLAGS'] = ('-arch %(OSX_ARCH)s' % d) if not cc.build_ldflags else cc.build_ldflags  #FIX ME: should this be like linux???
+        if cc.build_fflags:
+            d['FFLAGS'] = cc.build_fflags
+        if cc.build_fcflags:
+            d['FCFLAGS'] = cc.build_fcflags
+        d['MAKEOPTS'] = '-j 1' if not cc.build_makeopts else cc.build_makeopts    #FIX ME: does that work in OSX???
+        d['MACOSX_DEPLOYMENT_TARGET'] = '10.5' if not cc.build_macosx_deployment_target else cc.build_macosx_deployment_target    #FIX ME: does that work in OSX???
 
     elif sys.platform.startswith('linux'):      # -------- Linux
         d['LD_RUN_PATH'] = build_prefix + '/lib'
-
+        if cc.build_cppflags:
+            d['CPPFLAGS'] = cc.build_cppflags
+        if cc.build_cflags:
+            d['CFLAGS'] = cc.build_cflags
+        if cc.build_cxxflags:
+            d['CXXFLAGS'] = cc.build_cxxflags
+        if cc.build_ldflags:
+            d['LDFLAGS'] = cc.build_ldflags
+        if cc.build_fflags:
+            d['FFLAGS'] = cc.build_fflags
+        if cc.build_fcflags:
+            d['FCFLAGS'] = cc.build_fcflags
+        d['MAKEOPTS'] = '-j 1' if not cc.build_makeopts else cc.build_makeopts
+        if cc.build_chost:
+            d['CHOST'] = cc.build_chost
+        
     if m:
         d['PKG_NAME'] = m.name()
         d['PKG_VERSION'] = m.version()
