@@ -122,16 +122,12 @@ def execute(args, parser):
 
     with Locked(croot):
         for arg in args.recipe:
-            if isfile(arg):
-                if arg.endswith(('.tar', '.tar.gz', '.tgz', '.tar.bz2')):
+            if isfile(arg) and arg.endswith(('.tar', '.tar.gz', '.tgz', '.tar.bz2')):
                     recipe_dir = tempfile.mkdtemp()
                     t = tarfile.open(arg, 'r:*')
                     t.extractall(path=recipe_dir)
                     t.close()
                     need_cleanup = True
-                else:
-                    print("Ignoring non-recipe: %s" % arg)
-                    continue
             else:
                 recipe_dir = abspath(arg)
                 need_cleanup = False
