@@ -7,7 +7,9 @@ channels:
   - http://repo.continuum.io/pkgs/free
   - http://repo.continuum.io/pkgs/pro
   - http://some.custom/channel
-
+#   local channels
+  - file:///opt/anaconda/conda-bld
+  
 # Proxy settings: http://[username]:[password]@[server]:[port]
 proxy_servers:
     http: http://user:pass@corp.com:8080
@@ -45,3 +47,96 @@ disallow:
 
 # enable certain features to be tracked by default
 track_features: mkl
+
+
+
+# ----------------------------------------------------
+#build options for: LINUX, MACOSX (DARWIN OS X): 
+
+# use: You can invoke GCC with "-Q --help=optimizers" to find out the exact 
+# set of optimizations that are enabled
+# Most optimizations are only enabled if an -O level is set on the command 
+# line. Otherwise they are disabled even if individual optimization flags 
+# are specified. 
+# some related links of interest
+# http://gcc.gnu.org/onlinedocs/  
+# http://gcc.gnu.org/onlinedocs/gcc-4.8.2/gcc/Overall-Options.html#Overall-Options
+# http://gcc.gnu.org/onlinedocs/gcc-4.8.2/gcc/Optimize-Options.html#Optimize-Options
+# http://gcc.gnu.org/onlinedocs/gcc/Submodel-Options.html#Submodel-Options
+# https://wiki.gentoo.org/wiki/GCC_optimization
+# http://www.gnu.org/software/make/manual/html_node/Overriding.html
+# http://www.ilkda.com/compile/Environment_Variables.htm
+# http://linuxreviews.org/man/make.conf/
+# https://developer.apple.com/library/mac/documentation/porting/conceptual/portingunix/compiling/compiling.html
+# http://faculty.washington.edu/rjl/uwamath583s11/sphinx/notes/html/gfortran_flags.html
+
+# CPPFLAGS     ***LINUX, MACOSX: C/C++/Objective C preprocessor flags, 
+# e.g. -I<include dir> if
+# you have headers in a nonstandard directory <include dir>
+# In build.sh: usually one does not need to specify anything in 
+# LINUX/MACOSX: Variable is ONLY exported if configured here
+build_cppflags: "-I/MyInclude"
+
+# CFLAGS    ***LINUX, MACOSX: C compiler flags
+# In build.sh: usually one does not need to specify anything in 
+# LINUX: Variable is ONLY exported if configured here
+# MACOSX: if not configured here the variable is exported with default:
+# "-arch %(OSX_ARCH)s" where OSX_ARCH = i386 or x86_64
+build_cflags: "-O2 -pipe"
+
+# CXXFLAGS    ***LINUX, MACOSX: C++ compiler flags
+# In build.sh: usually one does not need to specify anything in 
+# LINUX: Variable is ONLY exported if configured here
+# MACOSX: if not configured here the variable is exported with default:
+# same as: "CFLAGS"
+build_cxxflags: "-O2 -pipe"
+
+# LDFLAGS    ***LINUX, MACOSX: LD flags: linker flags, 
+# e.g. -L<lib dir> if you have libraries in a nonstandard directory <lib dir>
+# In build.sh: usually one does not need to specify anything in 
+# LINUX: Variable is ONLY exported if configured here
+# MACOSX: if not configured here the variable is exported with default:
+# "-arch %(OSX_ARCH)s" where OSX_ARCH = i386 or x86_64
+build_ldflags: "-L/home/MyLib" 
+
+# FFLAGS     ***LINUX, MACOSX: Fortran 77 compiler flags 
+# see http://linuxreviews.org/man/make.conf/
+#   FFLAGS is usually passed to the FORTRAN 77 compiler, 
+# and FCFLAGS to any FORTRAN compiler in more modern build systems.
+# In build.sh: usually one does not need to specify anything in 
+# LINUX/MACOSX: Variable is ONLY exported if configured here
+build_fflags: "-Wall"     
+  
+
+# FCFLAGS     ***LINUX, MACOSX: Fortran compiler flags 
+# see http://linuxreviews.org/man/make.conf/
+#   FFLAGS is usually passed to the FORTRAN 77 compiler, 
+# and FCFLAGS to any FORTRAN compiler in more modern build systems.
+# In build.sh: usually one does not need to specify anything in 
+# LINUX/MACOSX: Variable is ONLY exported if configured here
+build_fcflags: "-Wall"      
+          
+# MAKEOPTS    ***LINUX, MACOSX: MAKE multi-core option: always exported
+# gnu make multi-core compile option: -j [N], --jobs[=N]  Allow N jobs at once; 
+# jobs with no arg.
+# LINUX/MACOSX: Variable is ALWAYS ONLY exported. 
+# if not configured here the variable is exported with default: "-j 1"
+# USAGE example: in build.sh: make $MAKEOPTS
+build_makeopts: "-j 1"
+
+# CHOST    ***LINUX: CHOST: can be used for cross-compiling 
+# e.g. passed on to: --host=$CHOST   or  maybe --target=$CHOST  
+# http://wiki.gentoo.org/wiki/CHOST
+# The variable is a dash-separated tuple in the form of ARCH-VENDOR-OS-LIBC. 
+# ARCH specifies the CPU architecture, VENDOR specifies the hardware platform 
+# or vendor, OS is the operating system, and LIBC is the C library to use. 
+# Only ARCH is strictly required in all cases, but - for Linux machines at
+# least - it's good practice to specify all four fields
+# LINUX: Variable is ONLY exported if configured here
+# USAGE example: in build.sh: ./configure --host=$CHOST
+build_chost: "x86_64-unknown-linux-gnu"
+
+# MACOSX_DEPLOYMENT_TARGET    ***MACOSX: 
+# MACOSX: if not configured here the variable is exported with default:
+# "10.5"
+build_macosx_deployment_target: "10.5"
