@@ -1,7 +1,10 @@
 20XX-XX-XX   2.2.6:
 -------------------
   * minor Py3k fixes for conda build on Linux
-
+  * add ability to configure build flags within .condarc: LINUX/Mac OSX
+    CPPFLAGS, CFLAGS, CXXFLAGS, LDFLAGS, FFLAGS, FFLAGS, MAKEOPTS, CHOST, 
+    MACOSX_DEPLOYMENT_TARGET: see issue #435, #423 
+  * fixed minor issues: #426,  #430 (suggestions: 2,3) 
 
 2013-12-17   2.2.5:
 -------------------
